[package]
name = "binding_wasm"
version = "0.1.0"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3"
stc_visit = { path = "../stc_visit" }
stc_ts_dts = { path = "../stc_ts_dts" }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
